# GPU-DualGradient-MPC

./: README.md
Code/CUDA/: CMakeLists.txt  main.cu  step2.cu  step3.cu  step4.cu
Code/CUDA/FinalProject/: CMakeLists.txt  main.cu
Code/CUDA/FinalProject/include/: kernel_functions.h  seq_functions.h
Code/CUDA/FinalProject/src/: kernel_functions.cu  seq_functions.cpp
Code/CUDA/Test Data - Step2/1/: input.txt
Code/CUDA/Test Data - Step2/2/: input.txt
Code/CUDA/Test Data - Step2/3/: output.txt
Code/CUDA/Test Data - Step2/4/: output.txt
Code/CUDA/step2/1/: output.txt
Code/Code/MATLAB/ECE5770_GPAD_MATLABCode/: CMakeLists.txt
Code/Code/MATLAB/ECE5770_GPAD_MATLABCode/step2/2/: output.txt
Code/Code/MATLAB/ECE5770_GPAD_MATLABCode/step2/4/: input.txt
Code/MATLAB/: acceldualgrad.m  gpad.m
